unpackaged/main/default/objects/pro_Piece_Part_Request__c/pro_Piece_Part_Request__c.object-meta.xml
<CustomObject>
    <label>Piece Part Request</label>
    <nameField>
        <displayFormat>PP-R {00000000}</displayFormat>
        <label>Piece Part Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Piece Part Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>