unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Consignment_Rate__c.field-meta.xml
<CustomField>
    <fullName>pro_Consignment_Rate__c</fullName>
    <formula>pro_Repair_Order_Line__r.inscor__Original_Inventory_Line__r.inscor__Owner_Code__r.inscor__Consignment_Rate__c</formula>
    <label>Consignment Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>