unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Description__c.field-meta.xml
<CustomField>
    <fullName>pro_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>