unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Eirtrade_Profit__c.field-meta.xml
<CustomField>
    <fullName>pro_Eirtrade_Profit__c</fullName>
    <formula>pro_Final_Savings__c * (1- pro_Consignment_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eirtrade Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>