unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Final_Savings__c.field-meta.xml
<CustomField>
    <fullName>pro_Final_Savings__c</fullName>
    <formula>IF(ISBLANK(pro_Savings_Manual__c) || pro_Savings_Manual__c = 0 , pro_Shop_Estimated_Total__c - pro_Preferred_Supplier_Price__c, pro_Savings_Manual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>