unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Follow_Up_Date__c</fullName>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>