unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_High_Potential__c.field-meta.xml
<CustomField>
    <fullName>pro_High_Potential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Potential</label>
    <type>Checkbox</type>
</CustomField>