unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>pro_Part_Number__c</fullName>
    <formula>pro_Repair_Order_Line__r.inscor__Original_Inventory_Line__r.inscor__Product__r.Name</formula>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>