unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Preferred_Supplier_Price__c.field-meta.xml
<CustomField>
    <fullName>pro_Preferred_Supplier_Price__c</fullName>
    <label>Preferred Supplier Price</label>
    <summarizedField>pro_Piece_Part_Quote__c.pro_Total__c</summarizedField>
    <summaryFilterItems>
        <field>pro_Piece_Part_Quote__c.pro_Preferred_Supplier__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>pro_Piece_Part_Quote__c.pro_Piece_Part_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>