unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Quantity_Needed__c.field-meta.xml
<CustomField>
    <fullName>pro_Quantity_Needed__c</fullName>
    <label>Quantity Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>