unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Repair_Order__c.field-meta.xml
<CustomField>
    <fullName>pro_Repair_Order__c</fullName>
    <formula>pro_Repair_Order_Line__r.pro_Repair_Order_Name__c</formula>
    <label>Repair Order</label>
    <type>Text</type>
</CustomField>