unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Repair_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>pro_Repair_Order_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Repair Order Line</label>
    <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
    <relationshipLabel>Piece Part Requests</relationshipLabel>
    <relationshipName>Piece_Part_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>