unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Repair_Order_Lookup__c.field-meta.xml
<CustomField>
    <fullName>pro_Repair_Order_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Order</label>
    <referenceTo>inscor__Repair_Order__c</referenceTo>
    <relationshipLabel>Piece Part Requests</relationshipLabel>
    <relationshipName>Piece_Part_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>