unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Repair_Shop__c.field-meta.xml
<CustomField>
    <fullName>pro_Repair_Shop__c</fullName>
    <formula>pro_Repair_Order_Line__r.pro_Vendor__c</formula>
    <label>Repair Shop</label>
    <type>Text</type>
</CustomField>