unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Request_Keyword__c.field-meta.xml
<CustomField>
    <fullName>pro_Request_Keyword__c</fullName>
    <label>Request Keyword</label>
    <type>TextArea</type>
</CustomField>