unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Result__c.field-meta.xml
<CustomField>
    <fullName>pro_Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>No Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>