unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Result_Image__c.field-meta.xml
<CustomField>
    <fullName>pro_Result_Image__c</fullName>
    <formula>IMAGE(
    CASE(
         pro_Result__c ,
        &quot;Savings&quot;, &quot;/resource/1705671314000/GraphicsPackNew/fatcow/farmfresh/32/money_dollar.png&quot;,
        &quot;No Savings&quot;, &quot;/resource/1705671314000/GraphicsPackNew/fatcow/farmfresh/32/thumb_down.png&quot;,
       
        &quot;&quot;
    ),
    &quot;Result&quot;
)</formula>
    <label>Result</label>
    <type>Text</type>
</CustomField>