unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Savings_Manual__c.field-meta.xml
<CustomField>
    <fullName>pro_Savings_Manual__c</fullName>
    <label>Savings (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>