unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>pro_Serial_Number__c</fullName>
    <formula>pro_Repair_Order_Line__r.inscor__Original_Inventory_Line__r.inscor__Serial_Number__c</formula>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>