unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Shop_Cost__c.field-meta.xml
<CustomField>
    <fullName>pro_Shop_Cost__c</fullName>
    <label>Shop Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>