unpackaged/main/default/objects/pro_Piece_Part_Request__c/fields/pro_Shop_Estimated_Total__c.field-meta.xml
<CustomField>
    <fullName>pro_Shop_Estimated_Total__c</fullName>
    <formula>pro_Shop_Cost__c * pro_Quantity_Needed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Estimated Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>