unpackaged/main/default/objects/pro_Piece_Part_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pro_Request_Keyword__c</columns>
    <columns>pro_Serial_Number__c</columns>
    <columns>pro_Repair_Order_Line__c</columns>
    <columns>pro_Repair_Order_Lookup__c</columns>
    <columns>pro_Part_Number__c</columns>
    <columns>pro_Repair_Shop__c</columns>
    <columns>pro_Consignment_Rate__c</columns>
    <columns>pro_Status__c</columns>
    <columns>pro_High_Potential__c</columns>
    <columns>pro_Result__c</columns>
    <columns>pro_Result_Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>